tests/NormalTests/paczka1/small_fuzzy/59975887.err
Error in line 1: pG8Zcn0o A738 91,9
Error in line 14: pG8ZcnJo A571 7J,9
